[gd_scene load_steps=8 format=3 uid="uid://cx5b2r46v00uw"]

[ext_resource type="Texture2D" uid="uid://dsc3ly3yyje2k" path="res://Backgrounds/starbackground0.png" id="1_ku1mf"]
[ext_resource type="Script" path="res://Scenes/duel.gd" id="1_ljhtk"]
[ext_resource type="Texture2D" uid="uid://dr7x5xbprtx2w" path="res://Backgrounds/starbackground1.png" id="2_mkbtj"]
[ext_resource type="Texture2D" uid="uid://dhmbvsr0g6yvu" path="res://Backgrounds/starbackground2.png" id="3_luy51"]
[ext_resource type="Texture2D" uid="uid://cg55dg77mwxkh" path="res://Cards/manastreambackrainbowCorrectRes.png" id="6_8c1q3"]
[ext_resource type="Texture2D" uid="uid://bx1fpjvc0fhqe" path="res://Art/heart16.png" id="6_rwkrb"]
[ext_resource type="Theme" uid="uid://d2ypb0vgb31t6" path="res://Cards/CardFontDefaultTheme.tres" id="7_o1sjj"]

[node name="Duel" type="Node2D"]
script = ExtResource("1_ljhtk")

[node name="Parallax" type="Node2D" parent="."]

[node name="PFar" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(640, 480)
autoscroll = Vector2(50, 50)
repeat_times = 3

[node name="Far" type="Sprite2D" parent="Parallax/PFar"]
position = Vector2(320, 240)
texture = ExtResource("1_ku1mf")

[node name="PMid" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(640, 480)
autoscroll = Vector2(100, 100)
repeat_times = 3

[node name="Mid" type="Sprite2D" parent="Parallax/PMid"]
position = Vector2(320, 240)
texture = ExtResource("2_mkbtj")

[node name="PNear" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(640, 480)
autoscroll = Vector2(150, 150)
repeat_times = 3

[node name="Near" type="Sprite2D" parent="Parallax/PNear"]
position = Vector2(320, 240)
texture = ExtResource("3_luy51")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 480.0
mouse_filter = 2

[node name="Player1Zone" type="VBoxContainer" parent="Control"]
layout_direction = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -240.0
offset_right = 495.0
grow_vertical = 0

[node name="P1SummonZone" type="HBoxContainer" parent="Control/Player1Zone"]
layout_mode = 2
size_flags_vertical = 3

[node name="P1ManaZone" type="HBoxContainer" parent="Control/Player1Zone"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 120

[node name="P1Hand" type="HBoxContainer" parent="Control/Player1Zone"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 120

[node name="P1Deck" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 525.0
offset_top = 307.0
offset_right = 638.0
offset_bottom = 482.0
texture_normal = ExtResource("6_8c1q3")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 583.0
offset_top = 269.0
offset_right = 615.0
offset_bottom = 301.0
texture = ExtResource("6_rwkrb")

[node name="P1Life" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 545.0
offset_top = 266.0
offset_right = 584.0
offset_bottom = 306.0
theme = ExtResource("7_o1sjj")
text = "10"

[node name="InspectionArea" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 1.0
offset_top = 141.0
offset_right = 642.0
offset_bottom = 338.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="Control/InspectionArea"]
layout_mode = 0
offset_left = 197.0
offset_top = -49.0
offset_right = 268.0
offset_bottom = 7.0

[node name="P1Mana" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 544.0
offset_top = 239.0
offset_right = 595.0
offset_bottom = 263.0
theme = ExtResource("7_o1sjj")
text = "0/0"

[connection signal="pressed" from="Control/P1Deck" to="." method="_on_p_1_deck_pressed"]
